// Schéma 5: Communication & Blog
// https://dbdiagram.io/

// Table de référence (pour les relations FK)
Table users {
  id bigint [pk, increment]
  username varchar(255) [unique, not null]
  email varchar(255) [unique, not null]
  role enum('Admin','User') [default: 'User']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Table utilisateurs (référence pour les relations FK)'
}

Table newsletters {
  id bigint [pk, increment]
  title varchar(255) [not null]
  subject varchar(255) [not null]
  content text [not null]
  excerpt text [null]
  featured_image varchar(255) [null]
  
  // Gestion des envois
  status enum('draft','scheduled','sent','cancelled') [default: 'draft']
  scheduled_at timestamp [null]
  sent_at timestamp [null]
  recipients_count integer [default: 0]
  sent_count integer [default: 0]
  failed_count integer [default: 0]
  
  // Statistiques d'engagement
  opened_count integer [default: 0]
  clicked_count integer [default: 0]
  unsubscribed_count integer [default: 0]
  
  // Métadonnées
  tags json [null]
  metadata json [null]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Newsletters avec statistiques d\'engagement'
}

Table newsletter_subscriptions {
  id bigint [pk, increment]
  email varchar(255) [unique, not null]
  user_id bigint [ref: > users.id, null]
  status enum('active','unsubscribed','bounced') [default: 'active']
  source varchar(255) [null]
  subscribed_at timestamp [not null]
  unsubscribed_at timestamp [null]
  unsubscribe_reason varchar(255) [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Abonnements aux newsletters'
}

Table newsletter_sends {
  id bigint [pk, increment]
  newsletter_id bigint [ref: > newsletters.id]
  subscription_id bigint [ref: > newsletter_subscriptions.id]
  status enum('pending','sent','failed','bounced') [default: 'pending']
  sent_at timestamp [null]
  opened_at timestamp [null]
  clicked_at timestamp [null]
  bounced_at timestamp [null]
  error_message text [null]
  tracking_id varchar(255) [null]
  email_provider_id varchar(255) [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Envois individuels de newsletters avec tracking'
}

Table email_logs {
  id bigint [pk, increment]
  to_email varchar(255) [not null]
  subject varchar(255) [not null]
  body text [not null]
  status enum('pending','sent','failed') [default: 'pending']
  sent_at timestamp [null]
  error_message text [null]
  provider varchar(255) [null]
  provider_message_id varchar(255) [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Logs de tous les emails envoyés par le système'
}

Table blog_categories {
  id bigint [pk, increment]
  name varchar(255) [unique, not null]
  description text [null]
  slug varchar(255) [unique, not null]
  parent_id bigint [ref: > blog_categories.id, null]
  sort_order integer [default: 0]
  is_active boolean [default: true]
  
  // SEO
  meta_title varchar(255) [null]
  meta_description text [null]
  meta_keywords varchar(255) [null]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Catégories de blog avec hiérarchie'
}

Table blog_posts {
  id bigint [pk, increment]
  blog_category_id bigint [ref: > blog_categories.id]
  title varchar(255) [not null]
  slug varchar(255) [unique, not null]
  excerpt text [null]
  content longtext [not null]
  featured_image varchar(255) [null]
  gallery json [null]
  
  // Statut et publication
  status enum('draft','published','scheduled','archived') [default: 'draft']
  published_at timestamp [null]
  scheduled_for timestamp [null]
  
  // SEO
  meta_title varchar(255) [null]
  meta_description text [null]
  meta_keywords varchar(255) [null]
  metadata json [null]
  
  // Engagement
  tags json [null]
  views_count integer [default: 0]
  likes_count integer [default: 0]
  comments_count integer [default: 0]
  is_featured boolean [default: false]
  
  // Traductions intégrées
  title_en varchar(255) [null]
  title_fr varchar(255) [null]
  excerpt_en text [null]
  excerpt_fr text [null]
  content_en longtext [null]
  content_fr longtext [null]
  meta_title_en varchar(255) [null]
  meta_title_fr varchar(255) [null]
  meta_description_en text [null]
  meta_description_fr text [null]
  slug_en varchar(255) [null]
  slug_fr varchar(255) [null]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Articles de blog multilingues (FR/EN)'
}

Table blog_comments {
  id bigint [pk, increment]
  blog_post_id bigint [ref: > blog_posts.id]
  user_id bigint [ref: > users.id]
  parent_id bigint [ref: > blog_comments.id, null]
  content text [not null]
  status enum('pending','approved','rejected','spam') [default: 'pending']
  is_pinned boolean [default: false]
  approved_at timestamp [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Commentaires de blog avec modération et réponses'
}

Table blog_comment_reports {
  id bigint [pk, increment]
  blog_comment_id bigint [ref: > blog_comments.id]
  user_id bigint [ref: > users.id]
  reason enum('spam','inappropriate','offensive','other') [not null]
  description text [null]
  status enum('pending','reviewed','resolved') [default: 'pending']
  reviewed_by bigint [ref: > users.id, null]
  reviewed_at timestamp [null]
  admin_notes text [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Signalements de commentaires inappropriés'
}

Table blog_post_translations {
  id bigint [pk, increment]
  blog_post_id bigint [ref: > blog_posts.id]
  locale varchar(10) [not null]
  title varchar(255) [not null]
  slug varchar(255) [not null]
  excerpt text [null]
  content longtext [not null]
  meta_title varchar(255) [null]
  meta_description text [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  indexes {
    (blog_post_id, locale) [unique]
  }
  
  Note: 'Table de traductions séparée pour les articles'
}
